--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="https://bbq.calpoly.cc">Home</a>
+            <a href="https://news.fiscon.cc">Home</a>
             <a href="https://bbq.calpoly.cc">World</a>
             <a href="https://bbq.calpoly.cc">Politics</a>
             <a href="https://bbq.calpoly.cc">Business</a>
