--- a/read.html
+++ b/read.html
@@ -7,6 +7,7 @@
     <script defer src="display.js"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 20px; max-width: 800px; margin: auto; }
+        .header { background: #333; color: white; padding: 15px; text-align: center; }
         h1 { text-align: center; }
         .meta { font-size: 14px; color: gray; text-align: center; }
         .content { margin-top: 20px; }
