--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Site</title>
+    <title>Fiscon News Homepage</title>
     <script defer src="script.js"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
@@ -26,9 +26,10 @@
     <header class="header">
         <nav class="nav">
             <a href="https://news.fiscon.cc">Home</a>
-            <a href="https://bbq.calpoly.cc">World</a>
-            <a href="https://bbq.calpoly.cc">Politics</a>
-            <a href="https://bbq.calpoly.cc">Business</a>
+            <a href="https://news.fiscon.cc/photos">Gallery</a>
+            <a href="https://news.fiscon.cc/contact">Contact</a>
+            <a href="https://news.fiscon.cc/about">About</a>
+            
         </nav>
     </header>
     <main>
