all of astros edits

--- a/index.html
+++ b/index.html
@@ -1,35 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiscon News Homepage</title>
     <script defer src="script.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        .header { background: #333; color: white; padding: 15px; text-align: center; }
-        .nav { display: flex; justify-content: center; gap: 15px; }
-        .nav a { color: white; text-decoration: none; }
-        .articles { display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 10px; padding: 20px; }
-        .article { cursor: pointer; }
-        .article img { width: 100%; height: auto; }
-        .article h2 { margin: 10px 0; }
-        .small-articles { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .header {
+            background: #333;
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
+
+        .nav {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        .nav a {
+            color: white;
+            text-decoration: none;
+        }
+
+        .articles {
+            display: grid;
+            grid-template-columns: 2fr 1fr 1fr;
+            gap: 10px;
+            padding: 20px;
+        }
+
+        .article {
+            cursor: pointer;
+        }
+
+        .article img {
+            width: 100%;
+            height: auto;
+        }
+
+        .article h2 {
+            margin: 10px 0;
+        }
+
+        .small-articles {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+
         @media (max-width: 768px) {
-            .nav { display: block; text-align: center; }
-            .articles { display: block; }
-            .small-articles { display: block; }
+            .nav {
+                display: block;
+                text-align: center;
+            }
+
+            .articles {
+                display: block;
+            }
+
+            .small-articles {
+                display: block;
+            }
         }
     </style>
 </head>
+
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="https://news.fiscon.cc">Home</a>
-            <a href="https://news.fiscon.cc/photos">Gallery</a>
-            <a href="https://news.fiscon.cc/contact">Contact</a>
-            <a href="https://news.fiscon.cc/about">About</a>
-            
+            <a href="/">Home</a>
+            <a href="/photos">Gallery</a>
+            <a href="/contact">Contact</a>
+            <a href="/about">About</a>
+
         </nav>
     </header>
     <main>
@@ -55,7 +107,7 @@
                         <h2>${mainArticle.title}</h2>
                         <p>${mainArticle.date} • ${mainArticle.readTime} min read</p>
                     </div>`;
-                
+
                 const smallArticles = document.createElement('div');
                 smallArticles.className = 'small-articles';
                 articles.slice(1).forEach(article => {
@@ -73,4 +125,5 @@
         fetchArticles();
     </script>
 </body>
+
 </html>
